added carbon badge, first post, styling

--- a/digital-garden.html
+++ b/digital-garden.html
@@ -10,6 +10,11 @@
 			type="text/javascript"
 			defer
 		></script>
+		<script
+			src="../../components/posts-menu.js"
+			type="text/javascript"
+			defer
+		></script>
 		<link rel="stylesheet" href="./css/main.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +27,8 @@
 	</head>
 	<body>
 		<header>
-			<header-component activePage="home"></header-component>
+			<header-component activePage="digital-garden"></header-component>
+			<posts-menu></posts-menu>
 		</header>
 		<!-- Body -->
 		<carbon-badge></carbon-badge>
