--- a/projects.html
+++ b/projects.html
@@ -18,11 +18,11 @@
 			rel="stylesheet"
 		/>
 
-		<title>Everlearning</title>
+		<title>Everlearning | Projects</title>
 	</head>
 	<body>
 		<header>
-			<header-component activePage="home"></header-component>
+			<header-component activePage="projects"></header-component>
 		</header>
 		<!-- Body -->
 		<carbon-badge></carbon-badge>
