forgotten files updated

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 			<header-component activePage="home"></header-component>
 		</header>
 		<!-- Body -->
+		<div id="wcb" class="carbonbadge"></div>
+		<script
+			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
+			defer
+		></script>
 		<carbon-badge></carbon-badge>
 	</body>
 </html>
