--- a/digital-garden.html
+++ b/digital-garden.html
@@ -4,15 +4,24 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="components/header.js" type="text/javascript" defer></script>
+		<script src="./components/header.js" type="text/javascript" defer></script>
 		<script
-			src="components/carbon-badge.js"
+			src="components/page-footer.js"
 			type="text/javascript"
 			defer
 		></script>
 		<script
-			src="../../components/posts-menu.js"
+			src="./components/carbon-badge.js"
 			type="text/javascript"
+			defer
+		></script>
+		<script
+			src="./components/posts-menu.js"
+			type="text/javascript"
+			defer
+		></script>
+		<script
+			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
 			defer
 		></script>
 		<link rel="stylesheet" href="./css/main.css" />
@@ -28,9 +37,13 @@
 	<body>
 		<header>
 			<header-component activePage="digital-garden"></header-component>
-			<posts-menu></posts-menu>
 		</header>
-		<!-- Body -->
-		<carbon-badge></carbon-badge>
+
+		<!-- Start Content -->
+		<div class="content"><posts-menu></posts-menu></div>
+		<!-- End Content -->
+		<page-footer>
+			<div id="wcb" class="carbonbadge"></div>
+		</page-footer>
 	</body>
 </html>
