--- a/digital-garden/sustainable-web-development.html
+++ b/digital-garden/sustainable-web-development.html
@@ -4,62 +4,88 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="../components/header.js" type="text/javascript" defer></script>
+		<!-- START Imports for Digital Garden Pages -->
 
+		<script src="../components/header.js" type="text/javascript" defer></script>
 		<script
-			src="../../../components/posts-menu.js"
+			src="../components/climbing-ivy.js"
 			type="text/javascript"
 			defer
 		></script>
-		<link rel="stylesheet" href="..//css/main.css" />
 		<script
-			src="../../../components/carbon-badge.js"
+			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
+			defer
+		></script>
+
+		<script src="../components/posts-menu.js" type="text/javascript"></script>
+		<script
+			src="../components/page-footer.js"
 			type="text/javascript"
 			defer
 		></script>
+		<link rel="stylesheet" href="../css/main.css" />
+
+		<!-- END Imports for Digital Garden Pages -->
+
 		<title>Sustainable Web Development</title>
 	</head>
 	<body>
 		<header>
 			<header-component activePage="digital-garden"></header-component>
 		</header>
-		<section>
-			<h1>Sustainable Web Development</h1>
-			<p>
-				So technically I haven't even finished setting up this site, but I have
-				to go ahead and start writing now. I've been working on expanding my
-				self-education around all things web development/internet/life, and
-				today stumbled onto this post from A List Apart
-				<a href="https://alistapart.com/article/sustainable-web-design-excerpt/"
-					>Sustainable Web Design, An Excerpt</a
-				>. I will admit that sustainability regarding the internet isn't
-				something I think of often. I have heard in passing of the hidden
-				environmental costs involved with browsing the web, however I honestly
-				never thought too much about it. I'm going to make sure that changes.
-				<br />
-				<br />
-				Within this excerpt from A List Apart, Tom mentions this tool,
-				<a href="https://www.websitecarbon.com/">Website Carbon Calculator</a>,
-				his team has built to assess a websites carbon emissions, and the form
-				of energy the hosting service uses. The website I am currently building
-				has scored well in terms of cleanliness of the site. Unfortunately the
-				hosting for the site is using, in their terms, 'bog standard energy'.
-				Which in turn has prompted me to research more into sustainable hosting.
-			</p>
-		</section>
-		<section>
-			<h3>Dark mode & Delete those e-mails</h3>
-			https://www.greenmatters.com/p/dark-mode-energy#
-			https://www.wholegraindigital.com/blog/website-energy-efficiency/
-		</section>
-		<section>
-			<h3>Sustainable Web Manifesto</h3>
-			https://www.sustainablewebmanifesto.com/
-		</section>
-		<section>
-			<h3>Australian Hosting</h3>
-			https://www.digitalpacific.com.au/hosting/
-		</section>
-		<carbon-badge></carbon-badge>
+		<!-- Start Content -->
+		<div class="content">
+			<section>
+				<h1>Sustainable Web Development</h1>
+				<p>
+					So technically I haven't even finished setting up this site, but I
+					have to go ahead and start writing now. I've been working on expanding
+					my self-education around all things web development/internet/life, and
+					today stumbled onto this post from A List Apart
+					<a
+						href="https://alistapart.com/article/sustainable-web-design-excerpt/"
+						>Sustainable Web Design, An Excerpt</a
+					>. I will admit that sustainability regarding the internet isn't
+					something I think of often. I have heard in passing of the hidden
+					environmental costs involved with browsing the web, however I honestly
+					never thought too much about it. I'm going to make sure that changes.
+					<br />
+					<br />
+					Within this excerpt from A List Apart, Tom mentions this tool,
+					<a href="https://www.websitecarbon.com/">Website Carbon Calculator</a
+					>, his team has built to assess a websites carbon emissions, and the
+					form of energy the hosting service uses. The website I am currently
+					building has scored well in terms of cleanliness of the site.
+					Unfortunately the hosting for the site is using, in their terms, 'bog
+					standard energy'. Which in turn has prompted me to research more into
+					sustainable hosting.
+				</p>
+			</section>
+			<section>
+				<p>
+					I started off in just plain HTML, CSS, and then banging my head
+					against Javascript.
+				</p>
+			</section>
+			<section>
+				<h3>Dark mode & Delete those e-mails</h3>
+				https://www.greenmatters.com/p/dark-mode-energy#
+				https://www.wholegraindigital.com/blog/website-energy-efficiency/
+			</section>
+			<section>
+				<h3>Sustainable Web Manifesto</h3>
+				https://www.sustainablewebmanifesto.com/
+			</section>
+			<section>
+				<h3>Australian Hosting</h3>
+				https://www.digitalpacific.com.au/hosting/
+			</section>
+			<climbing-ivy ivy="../imgs/ivy.svg"></climbing-ivy>
+		</div>
+
+		<!-- End Content -->
+		<page-footer>
+			<div id="wcb" class="carbonbadge"></div>
+		</page-footer>
 	</body>
 </html>
