--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="components/header.js" type="text/javascript" defer></script>
 		<script
-			src="components/carbon-badge.js"
+			src="components/page-footer.js"
 			type="text/javascript"
+			defer
+		></script>
+		<script src="components/main-button.js" type="text/javascript"></script>
+		<script
+			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
 			defer
 		></script>
 		<link rel="stylesheet" href="./css/main.css" />
@@ -24,12 +29,27 @@
 		<header>
 			<header-component activePage="home"></header-component>
 		</header>
-		<!-- Body -->
-		<div id="wcb" class="carbonbadge"></div>
-		<script
-			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
-			defer
-		></script>
-		<carbon-badge></carbon-badge>
+		<!-- Start Content -->
+		<div class="content">
+			<main-button text="Press me" onclick="click()"></main-button>
+			<p>
+				What is a home page meant to be in this instance? To know that I should
+				probably know what the goal of this website is exactly.<br />
+				<br />
+				I'd say it's a collection of my thoughts and toys I've built. With
+				serious projects and research of topics throw in. It's my home. It is
+				what I want it to be. Or it will be at least. And then it will change
+				into what I'll want it to be in the future.
+			</p>
+		</div>
+		<!-- End Content -->
+		<page-footer>
+			<div id="wcb" class="carbonbadge"></div>
+		</page-footer>
+		<script>
+			function click() {
+				console.log("beep");
+			}
+		</script>
 	</body>
 </html>
