--- a/garden/index.html
+++ b/garden/index.html
@@ -4,19 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="./components/header.js" type="text/javascript" defer></script>
 		<script
-			src="components/page-footer.js"
-			type="text/javascript"
-			defer
-		></script>
-		<script
-			src="./components/carbon-badge.js"
-			type="text/javascript"
-			defer
-		></script>
-		<script
-			src="./components/posts-menu.js"
+			src="../js/components/components.js"
+			type="module"
 			type="text/javascript"
 			defer
 		></script>
@@ -24,7 +14,7 @@
 			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
 			defer
 		></script>
-		<link rel="stylesheet" href="./css/main.css" />
+		<link rel="stylesheet" href="../css/main.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -36,7 +26,7 @@
 	</head>
 	<body>
 		<header>
-			<header-component activePage="digital-garden"></header-component>
+			<header-component activePage="garden"></header-component>
 		</header>
 
 		<!-- Start Content -->
