--- a/garden/task-manager-project.html
+++ b/garden/task-manager-project.html
@@ -4,46 +4,41 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- START Imports for Digital Garden Pages -->
+		<!-- START Imports for Garden Pages -->
 
-		<script src="../components/header.js" type="text/javascript"></script>
-		<script src="../components/posts-menu.js" type="text/javascript"></script>
 		<script
-			src="../components/page-footer.js"
+			src="../js/components/components.js"
+			type="module"
 			type="text/javascript"
-			defer
 		></script>
+
 		<script
 			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
 			defer
 		></script>
 
 		<script
-			src="../components/climbing-ivy.js"
+			src="../js/components/climbing-ivy.js"
 			type="text/javascript"
 			defer
 		></script>
 
 		<link rel="stylesheet" href="../css/main.css" />
 
-		<!-- END Imports for Digital Garden Pages -->
-		<title>Document</title>
+		<!-- END Imports for Garden Pages -->
+		<title>Task Manager Project</title>
 	</head>
 	<body>
 		<header>
-			<header-component activePage="digital-garden"></header-component>
+			<header-component activePage="garden"></header-component>
 		</header>
 		<!-- Start Content -->
 		<div class="content">
 			<section>
-				<h1>Template</h1>
+				<h1>Reinventign the Wheel</h1>
 				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-					fuga quam ad maxime atque aut animi numquam ipsam debitis veritatis
-					laborum, consectetur inventore quod nostrum laudantium, hic optio, in
-					molestias!
-					<br />
-					<br />
+					Out there in the wide world there are roughly 100 billion
+					<span class="cit"></span>task manager/note taking/organisational apps.
 				</p>
 			</section>
 		</div>
