--- a/garden/web-components.html
+++ b/garden/web-components.html
@@ -4,34 +4,33 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- START Imports for Digital Garden Pages -->
+		<!-- START Imports for Garden Pages -->
 
-		<script src="../components/header.js" type="text/javascript"></script>
-		<script src="../components/posts-menu.js" type="text/javascript"></script>
 		<script
-			src="../components/page-footer.js"
+			src="../js/components/components.js"
+			type="module"
 			type="text/javascript"
-			defer
 		></script>
+
 		<script
 			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
 			defer
 		></script>
 
 		<script
-			src="../components/climbing-ivy.js"
+			src="../js/components/climbing-ivy.js"
 			type="text/javascript"
 			defer
 		></script>
 
 		<link rel="stylesheet" href="../css/main.css" />
 
-		<!-- END Imports for Digital Garden Pages -->
+		<!-- END Imports for Garden Pages -->
 		<title>Web Components</title>
 	</head>
 	<body>
 		<header>
-			<header-component activePage="digital-garden"></header-component>
+			<header-component activePage="garden"></header-component>
 		</header>
 		<!-- Start Content -->
 		<div class="content">
@@ -54,6 +53,7 @@
 					JQuery. And I'll admit it seemed great at first glace; a somewhat
 					shorter and easier to comprehend
 					<a
+						class="content--link"
 						href="https://en.wikipedia.org/wiki/Syntax_(programming_languages)"
 						class="definition"
 						>syntax (the way you write the code itself)</a
@@ -90,13 +90,13 @@
 					enjoy it, as I plowed through bunches of pages for the project we were
 					working on. Learning more about the logic behind it all, I could start
 					to appreciate the purpose of React. These were things I hadn't
-					attempted in Javascript; things like keeping state, dynamic rendering,
-					self contained nuggest of HTML, CSS and Javascript which could be
-					thrown into practically any page. I should also say the structure of
-					the project had also been reworked quite heavily, and in a way which
-					made waaaaay more sense to my inexperienced dev brain. This took a lot
-					of friction out of the work I was doing, giving me more time and space
-					to dedicate to React itself.
+					attempted in Javascript; things like keeping state, complex dynamic
+					rendering, self contained nuggets of HTML, CSS and Javascript which
+					could be thrown into practically any page. I should also say the
+					structure of the project had also been reworked quite heavily, and in
+					a way which made waaaaay more sense to my inexperienced dev brain.
+					This took a lot of friction out of the work I was doing, giving me
+					more time and brain-space to dedicate to React itself.
 					<br />
 					<br />
 					When I decided to move on from this job, I had developed an
@@ -118,8 +118,36 @@
 					never did a direct comparison to be honest. But for what I was
 					building, still a bit of overkill. And the amount of fiddling I have
 					had to do to score well on page load speeds, and to be SEO efficient
-					was bonkers. Which is when I started realising I would almost have
-					been better writing the whole thing the old school way.
+					was bonkers.
+					<br />
+					<br />
+					I was right at the end of building an e-commerce site, with all of
+					this pain of prerendering pages, fancy ways of getting meta tags on
+					the right pages, updating the url manually because technically this
+					was a single page application (SPA). It was then when I really started
+					realising I may have just been better off building it all the ol'
+					school way. The tried and true. HTML. CSS. Javascript. The holy
+					trinity.
+					<br />
+					<br />
+					This was also around the time I had stumbled onto articles about
+					<a
+						class="content--link"
+						href="./sustainable-web-development.html"
+						target="_blank"
+						>sustainable web development</a
+					>
+					and I started understanding how truly well an environmentally
+					friendl(y/ier) website could be so beneficial for everyone involved.
+					User, client, environment, developer.
+				</p>
+				<br />
+				<h3>Web Components</h3>
+				<p>
+					Ok, we've finally gotten to the title of this page! Web components.
+					Phew.
+					<br />
+					<br />
 				</p>
 			</section>
 		</div>
