--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="components/header.js" type="text/javascript" defer></script>
 		<script
-			src="components/page-footer.js"
+			src="js/components/components.js"
+			type="module"
 			type="text/javascript"
 			defer
 		></script>
-		<script src="components/main-button.js" type="text/javascript"></script>
+		<script
+			src="js/components/page-footer.js"
+			type="text/javascript"
+			defer
+		></script>
+		<script src="js/components/buttons.js" type="text/javascript"></script>
 		<script
 			src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
 			defer
@@ -32,6 +37,7 @@
 		<!-- Start Content -->
 		<div class="content">
 			<main-button text="Press me" onclick="click()"></main-button>
+			<href-button text="a link" href="/projects.html"></href-button>
 			<p>
 				What is a home page meant to be in this instance? To know that I should
 				probably know what the goal of this website is exactly.<br />
