edits to projects set up, adding info to task manager project

--- a/projects/index.html
+++ b/projects/index.html
@@ -26,7 +26,9 @@
 			<header-component activePage="projects"></header-component>
 		</header>
 		<!-- Start Content -->
-		<div class="content"></div>
+		<div class="content">
+			<projects-menu></projects-menu>
+		</div>
 		<!-- End Content-->
 		<page-footer>
 			<div id="wcb" class="carbonbadge"></div>
